--- a/blog.html
+++ b/blog.html
@@ -1,220 +1,217 @@
 <!DOCTYPE html>
 <html ng-app="worksBlog">
 <head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+	<meta charset="UTF-8">
+	<title></title>
 
 </head>
 <body >
 <!-- Header -->
 <div id="header" class="skel-panels-fixed">
 
-    <div class="top">
+	<div class="top">
 
-        <!-- Logo -->
-        <div id="logo">
-            <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-            <h1 id="title">Andrea Turco</h1>
-            <span class="byline">Interface developer</br> Web Developer</span>
-        </div>
+		<!-- Logo -->
+		<div id="logo">
+			<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+			<h1 id="title">Andrea Turco</h1>
+			<span class="byline">Interface developer</br> Web Developer</span>
+		</div>
 
-        <!-- Nav -->
-        <nav id="nav">
-            <ul>
-                <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
-                <li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Portfolio</span></a></li>
-                <li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">About Me</span></a></li>
-                <li><a href="#skills" id="skills-link" class="skel-panels-ignoreHref"><span class="fa fa-star">Skills</span></a></li>
-                <li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
-            </ul>
-        </nav>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
+				<li><a href="#experiences" id="experiences-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Experiences</span></a></li>
+				<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">About Me</span></a></li>
+				<li><a href="#skills" id="skills-link" class="skel-panels-ignoreHref"><span class="fa fa-star">Skills</span></a></li>
+				<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
+			</ul>
+		</nav>
 
-    </div>
+	</div>
 
-    <div class="bottom">
+	<div class="bottom">
 
-        <!-- Social Icons -->
-        <ul class="icons">
-            <li><a href="https://twitter.com/sigturk" class="fa fa-twitter solo" target="_blank"><span>Twitter</span></a></li>
-            <!--<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>-->
-            <li><a href="https://github.com/AndreaTurco" class="fa fa-github solo" target="_blank"><span>Github</span></a></li>
-            <!--<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>-->
-            <li><a href="https://www.linkedin.com/profile/view?id=125275335&trk=nav_responsive_tab_profile" class="fa fa-linkedin-square solo" target="_blank"><span>Linkedin</span></a></li>
-            <li><a href="mailto:turcoandrea85@gmail.com" class="fa fa-envelope solo" target="_blank"><span>Email</span></a></li>
-        </ul>
+		<!-- Social Icons -->
+		<ul class="icons">
+			<li><a href="https://twitter.com/sigturk" class="fa fa-twitter solo" target="_blank"><span>Twitter</span></a></li>
+			<!--<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>-->
+			<li><a href="https://github.com/AndreaTurco" class="fa fa-github solo" target="_blank"><span>Github</span></a></li>
+			<!--<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>-->
+			<li><a href="https://www.linkedin.com/profile/view?id=125275335&trk=nav_responsive_tab_profile" class="fa fa-linkedin-square solo" target="_blank"><span>Linkedin</span></a></li>
+			<li><a href="mailto:turcoandrea85@gmail.com" class="fa fa-envelope solo" target="_blank"><span>Email</span></a></li>
+		</ul>
 
-    </div>
+	</div>
 
 </div>
 
 <!-- Main -->
 <div id="main">
 
-    <!-- Intro -->
-    <section id="top" class="one">
-        <div class="container">
+	<!-- Intro -->
+	<section id="top" class="one">
+		<div class="container">
 
-            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+			<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 
-            <header>
-                <h2 class="alt">Personal site of <strong><i>Andrea Turco</i></strong>.<br />I'm An italian web developer<br />
-                    focused on the details and quality of things that matters.</h2>
-            </header>
+			<header>
+				<h2 class="alt">Personal site of <strong><i>Andrea Turco</i></strong>.<br />I'm An italian web developer<br />
+					focused on the details and quality of things that matters.</h2>
+			</header>
 
-            <p>I got works experience in both side of web development, frontend and backend.<br />Actually, i'm employed as interface developer and web designer.
-            </p>
+			<p>I got works experience in both side of web development, frontend and backend.<br />Actually, i'm employed as interface developer and web designer.
+			</p>
 
-            <footer>
-                <a href="#portfolio" class="button scrolly">WHAT I'VE WORKED ON</a>
-            </footer>
+			<footer>
+				<a href="#portfolio" class="button scrolly">WHAT I'VE WORKED ON</a>
+			</footer>
 
-        </div>
-    </section>
+		</div>
+	</section>
 
-    <!-- Portfolio -->
-    <section id="portfolio" class="two">
-        <div class="container">
+	<!-- Portfolio -->
+	<section id="experiences" class="two">
+		<div class="container">
 
-            <header>
-                <h2>Portfolio</h2>
-            </header>
+			<header>
+				<h2>Portfolio</h2>
+			</header>
+			<div class="row">
 
-            <!--<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis-->
-            <!--egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.-->
-            <!--Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis -->
-            <!--fusce hendrerit lacus ridiculus.</p>-->
+				<ng-view></ng-view>
 
-            <div class="row">
-                <div class="4u">
-                    <article class="item">
-                        <a href="#" class="image full"><img src="images/pic05.jpg" alt="" /></a>
-                        <header>
-                            <h3>FRONTEND DEVELOPER AND WEB DESIGNER CONSULTANT AT YOOX for ScaiLab s.r.l.</h3>
-                        </header>
-                    </article>
-                    <article class="item">
-                        <a href="#" class="image full"><img src="images/pic02.jpg" alt="" /></a>
-                        <header>
-                            <h3>WEB DEVELOPER of <a href="www.lavoroeformazione.it"> lavoroeformazione </a><br/> - project for Tian S.r.l -</h3>
-                        </header>
-                    </article>
-                </div>
-                <div class="4u">
-                    <article class="item">
-                        <a href="#" class="image full"><img src="images/pic03.jpg" alt="" /></a>
-                        <header>
-                            <h3>WEB DEVELOPER of <a href="www.franchisingristorazione.it"> franchising risotrazione </a> - collaboration with Tian S.r.l.</h3>
-                        </header>
-                    </article>
-                    <article class="item">
-                        <a href="#" class="image full"><img src="images/pic04.jpg" alt="" /></a>
-                        <header>
-                            <h3>WEB DEVELOPER of <a href="www.btoble.com"> btoble </a> - collaboration with Tian S.r.l.</h3>
-                        </header>
-                    </article>
-                </div>
-                <div class="4u">
-                    <article class="item">
-                        <a href="#" class="image full"><img src="images/pic07.jpg" alt="" /></a>
-                        <header>
-                            <h3>WEB DEVELOPER FREELANCER</h3>
-                        </header>
-                    </article>
-                    <article class="item">
-                        <a href="#" class="image full"><img src="images/pic06.jpg" alt="" /></a>
-                        <header>
-                            <h3>WEB DEVELOPER of <a href="http://www.setinsnc.it/"> setin snc </a> - proejct for Setin snc</h3>
-                        </header>
-                    </article>
-                </div>
-            </div>
+				<div class="4u">
+					<article class="item">
+						<a href="#" class="image full"><img src="images/pic05.jpg" alt="" /></a>
+						<header>
+							<h3>FRONTEND DEVELOPER AND WEB DESIGNER CONSULTANT AT YOOX for ScaiLab s.r.l.</h3>
+						</header>
+					</article>
+					<article class="item">
+						<a href="#" class="image full"><img src="images/pic02.jpg" alt="" /></a>
+						<header>
+							<h3>WEB DEVELOPER of <a href="www.lavoroeformazione.it"> lavoroeformazione </a><br/> - project for Tian S.r.l -</h3>
+						</header>
+					</article>
+				</div>
+				<div class="4u">
+					<article class="item">
+						<a href="#" class="image full"><img src="images/pic03.jpg" alt="" /></a>
+						<header>
+							<h3>WEB DEVELOPER of <a href="www.franchisingristorazione.it"> franchising risotrazione </a> - collaboration with Tian S.r.l.</h3>
+						</header>
+					</article>
+					<article class="item">
+						<a href="#" class="image full"><img src="images/pic04.jpg" alt="" /></a>
+						<header>
+							<h3>WEB DEVELOPER of <a href="www.btoble.com"> btoble </a> - collaboration with Tian S.r.l.</h3>
+						</header>
+					</article>
+				</div>
+				<div class="4u">
+					<article class="item">
+						<a href="#" class="image full"><img src="images/pic07.jpg" alt="" /></a>
+						<header>
+							<h3>WEB DEVELOPER FREELANCER</h3>
+						</header>
+					</article>
+					<article class="item">
+						<a href="#" class="image full"><img src="images/pic06.jpg" alt="" /></a>
+						<header>
+							<h3>WEB DEVELOPER of <a href="http://www.setinsnc.it/"> setin snc </a> - proejct for Setin snc</h3>
+						</header>
+					</article>
+				</div>
+			</div>
 
-        </div>
-    </section>
+		</div>
+	</section>
 
-    <!-- About Me -->
-    <section id="about" class="three">
-        <div class="container">
+	<!-- About Me -->
+	<section id="about" class="three">
+		<div class="container">
 
-            <header>
-                <h2>About Me</h2>
-            </header>
+			<header>
+				<h2>About Me</h2>
+			</header>
 
-            <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+			<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-            <p>I am passionate in what I do, and i don't mind on how many time and dedication does it needs to be accomplish
-                because the only thing that matter is to create quality products. </p>
+			<p>I am passionate in what I do, and i don't mind on how many time and dedication does it needs to be accomplish
+				because the only thing that matter is to create quality products. </p>
 
-        </div>
-    </section>
-    <!-- skills -->
-    <section id="skills" class="five">
-        <div class="container">
+		</div>
+	</section>
+	<!-- skills -->
+	<section id="skills" class="five">
+		<div class="container">
 
-            <header>
-                <h2>Main Skills:</h2>
-            </header>
-            <h3>Frontend</h3>
-            <ul>
-                <li>HTML/HTML5</li>
-                <li>CSS/CSS3, SASS</li>
-                <li>JAVASCRIPT</li>
-                <li>JQUERY</li>
-                <li>AJAX</li>
-                <li>XSLT, XML</li>
-                <li>JSON</li>
-            </ul>
-            <p>All development are made for cross browser and responsive layout</p>
-            <br/>
-            <h3>Backend</h3>
-            <ul>
-                <li>PHP5, OOP AND MVC ORIENTED</li>
-                <li>MySQL, MONGO DB, ACTIVE RECORDS, DOCTRINE</li>
-            </ul>
+			<header>
+				<h2>Main Skills:</h2>
+			</header>
+			<h3>Frontend</h3>
+			<ul>
+				<li>HTML/HTML5</li>
+				<li>CSS/CSS3, SASS</li>
+				<li>JAVASCRIPT</li>
+				<li>JQUERY</li>
+				<li>AJAX</li>
+				<li>XSLT, XML</li>
+				<li>JSON</li>
+			</ul>
+			<p>All development are made for cross browser and responsive layout</p>
+			<br/>
+			<h3>Backend</h3>
+			<ul>
+				<li>PHP5, OOP AND MVC ORIENTED</li>
+				<li>MySQL, MONGO DB, ACTIVE RECORDS, DOCTRINE</li>
+			</ul>
 
 
-        </div>
-    </section>
+		</div>
+	</section>
 
-    <!-- Contact -->
-    <section id="contact" class="four">
-        <div class="container">
+	<!-- Contact -->
+	<section id="contact" class="four">
+		<div class="container">
 
-            <header>
-                <h2>Contact</h2>
-            </header>
+			<header>
+				<h2>Contact</h2>
+			</header>
 
-            <p>If you get some ideas to realize fill the form above.</p>
+			<p>If you get some ideas to realize fill the form above.</p>
 
-            <form method="post" action="email.php?do=sendEmail">
-                <div class="row half">
-                    <div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
-                    <div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
-                </div>
-                <div class="row half">
-                    <div class="12u">
-                        <textarea name="message" placeholder="Message"></textarea>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="12u">
-                        <a href="#" class="button submit">Send Message</a>
-                    </div>
-                </div>
-            </form>
+			<form method="post" action="email.php?do=sendEmail">
+				<div class="row half">
+					<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
+					<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
+				</div>
+				<div class="row half">
+					<div class="12u">
+						<textarea name="message" placeholder="Message"></textarea>
+					</div>
+				</div>
+				<div class="row">
+					<div class="12u">
+						<a href="#" class="button submit">Send Message</a>
+					</div>
+				</div>
+			</form>
 
-        </div>
-    </section>
+		</div>
+	</section>
 
 </div>
 
 <!-- Footer -->
 <div id="footer">
 
-    <!-- Copyright -->
-    <div class="copyright">
-        <p>&copy; 2014 Andrea Turco. All rights reserved.</p>
-    </div>
+	<!-- Copyright -->
+	<div class="copyright">
+		<p>&copy; 2014 Andrea Turco. All rights reserved.</p>
+	</div>
 
 </div>
 
