prova commit da sublime

--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
 				<h2>Portfolio</h2>
 			</header>
 			<div class="row">
-
+				<!-- parte angular -->
 				<ng-view></ng-view>
 
 				<div class="4u">
@@ -94,7 +94,7 @@
 						<header>
 							<h3>WEB DEVELOPER of <a href="www.lavoroeformazione.it"> lavoroeformazione </a><br/> - project for Tian S.r.l -</h3>
 						</header>
-					</article>
+					</article> 
 				</div>
 				<div class="4u">
 					<article class="item">
