aggiunta un po di logica ai controller

--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,8 @@
 			<span class="byline">Interface developer</br> Web Developer</span>
 		</div>
 
+        <div ng-view></div>
+
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
@@ -34,7 +36,7 @@
 				<li><a href="#skills" id="skills-link" class="skel-panels-ignoreHref"><span class="fa fa-star">Skills</span></a></li>
 				<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
 				<li><a href="#explore" class="skel-panels-ignoreHref"><span class="fa fa-envelope">prova explore</span></a></li>
-				<li><a href="#/showWorkDetailsController/1" class="skel-panels-ignoreHref"><span class="fa fa-envelope">prova workdetail</span></a></li>
+				<li><a href="/workDetails/1" class="skel-panels-ignoreHref"><span class="fa fa-envelope">prova workdetail</span></a></li>
 			</ul>
 		</nav>
 
@@ -61,7 +63,7 @@
 
 	<!-- Intro -->
 	<section id="top" class="one">
-		<div ng-view></div>
+
 		<div class="container">
 
 			<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
