--- a/app/blog.html
+++ b/app/blog.html
@@ -4,15 +4,14 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
-	<noscript>
-		<link rel="stylesheet" href="../css/skel-noscript.css" />
-		<link rel="stylesheet" href="../css/style.css" />
-		<link rel="stylesheet" href="../css/style-wide.css" />
-	</noscript>
+    <link rel="stylesheet" href="css/skel-noscript.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-wide.css" />
+    <link rel="stylesheet" href="css/my_style.css" />
 	<!--[if lte IE 9]>
-    <link rel="stylesheet" href="../css/ie9.css"/><![endif]-->
+    <link rel="stylesheet" href="css/ie9.css"/><![endif]-->
 	<!--[if lte IE 8]>
-    <link rel="stylesheet" href="../css/ie8.css"/><![endif]-->
+    <link rel="stylesheet" href="css/ie8.css"/><![endif]-->
 </head>
 <body >
 <!-- Header -->
@@ -29,22 +28,67 @@
 
 		<!-- Nav -->
 		<nav id="nav">
-			<ul>
+            <ul>
+                <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
+                <li><a href="#workExp" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Works Exper.</span></a></li>
+                <li><a href="#skills" id="skills-link" class="skel-panels-ignoreHref"><span class="fa fa-star">Skills</span></a></li>
+                <!--<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>-->
 				<li><a href="#explore" class="skel-panels-ignoreHref"><span class="fa fa-envelope">prova explore</span></a></li>
 				<li><a href="#/workDetails/1" class="skel-panels-ignoreHref"><span class="fa fa-envelope">prova workdetail</span></a></li>
-			</ul>
+            </ul>
 		</nav>
 
 	</div>
+    <div class="bottom">
+
+        <!-- Social Icons -->
+        <ul class="icons">
+            <li><a href="https://twitter.com/sigturk" class="fa fa-twitter solo" target="_blank"><span>Twitter</span></a></li>
+            <!--<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>-->
+            <li><a href="https://github.com/AndreaTurco" class="fa fa-github solo" target="_blank"><span>Github</span></a></li>
+            <!--<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>-->
+            <li><a href="https://www.linkedin.com/profile/view?id=125275335&trk=nav_responsive_tab_profile" class="fa fa-linkedin-square solo" target="_blank"><span>Linkedin</span></a></li>
+            <li><a href="mailto:turcoandrea85@gmail.com" class="fa fa-envelope solo" target="_blank"><span>Email</span></a></li>
+        </ul>
+
+    </div>
+
 
 
 </div>
 
 <!-- Main -->
 <div id="main">
+    <section id="top" class="one">
+        <div class="container">
+
+            <header>
+                <h2 class="alt">Search throw my <strong><i>works experience and skills</i></strong>.</h2>
+            </header>
+            <!--<footer>-->
+                <!--<a href="#portfolio" class="button scrolly">WHAT I'VE WORKED ON</a>-->
+            <!--</footer>-->
+
+        </div>
+    </section>
+
+
+    <section id="skills" ng-controller="worksExploreCtrl">
+        <header style="display: block;">
+            <div style="display: inline-block; width: 25%; float: left;">
+                Search throw works:
+            </div>
+            <div style="display: inline-block; width: 75%; float: left;">
+                <input ng-model="filtraWork">
+            </div>
+        </header>
+        <article class="singleWork" ng-repeat="work in allWorks | filter:filtraWork">
+            <h2>{{work.name}}</h2>
+            <h5>{{work.subtitle}}</h5>
+        </article>
+    </section>
 
     <div ng-view></div>
-
 
 </div>
 
@@ -67,4 +111,11 @@
 <script src="js/module.js"></script>
 <script src="js/worksExploreController.js"></script>
 <script src="js/showWorkDetailsController.js"></script>
+
+
+<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+<script src="js-template/jquery.min.js"></script>
+<script src="js-template/skel.min.js"></script>
+<script src="js-template/skel-panels.min.js"></script>
+<script src="js-template/init.js"></script>
 </html>
