fix inclusion , add material angular

--- a/app/blog.html
+++ b/app/blog.html
@@ -3,15 +3,15 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title></title>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/skel-noscript.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style-wide.css" />
-    <link rel="stylesheet" href="css/my_style.css" />
+    <link rel="stylesheet" href="../css/skel-noscript.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style-wide.css" />
 	<!--[if lte IE 9]>
-    <link rel="stylesheet" href="css/ie9.css"/><![endif]-->
+    <link rel="stylesheet" href="../css/ie9.css"/><![endif]-->
 	<!--[if lte IE 8]>
-    <link rel="stylesheet" href="css/ie8.css"/><![endif]-->
+    <link rel="stylesheet" href="../css/ie8.css"/><![endif]-->
 </head>
 <body >
 <!-- Header -->
@@ -104,18 +104,27 @@
 
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-route.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-resource.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-animate.min.js"></script>
+<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>-->
+<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-animate.min.js"></script>-->
+
+<!-- Angular Material Dependencies -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
+
+
 <script src="js/module.js"></script>
 <script src="js/worksExploreController.js"></script>
 <script src="js/showWorkDetailsController.js"></script>
 
 
-<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-<script src="js-template/jquery.min.js"></script>
-<script src="js-template/skel.min.js"></script>
-<script src="js-template/skel-panels.min.js"></script>
-<script src="js-template/init.js"></script>
+<!--[if lte IE 8]><script src="../js/html5shiv.js"></script><![endif]-->
+<!--<script src="../js/jquery.min.js"></script>
+<script src="../js/skel.min.js"></script>
+<script src="../js/skel-panels.min.js"></script>
+<script src="../js/init.js"></script>-->
 </html>
