--- a/app/blog.html
+++ b/app/blog.html
@@ -13,110 +13,123 @@
 	<!--[if lte IE 8]>
     <link rel="stylesheet" href="../css/ie8.css"/><![endif]-->
 </head>
-<body >
-<!-- Header -->
-<div id="header" class="skel-panels-fixed">
+<body style="min-width: auto">
+<div class="wrapper" layout="row" layout-wrap layout-margin="20px">
+    <!-- Header -->
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" style="background-color: #263238;">
+        <!--<md-toolbar class="md-theme-indigo">
+            <h1 class="md-toolbar-tools">Sidenav Left</h1>
+        </md-toolbar>
+        <md-content layout-padding>
+            <md-button ng-click="close()" class="md-primary" hide-gt-md>
+                Close Sidenav Left
+            </md-button>
+            <p hide-md show-gt-md>
+                This sidenav is locked open on your device. To go back to the default behavior,
+                narrow your display.
+            </p>
+        </md-content>-->
 
-	<div class="top">
+        <div class="top">
 
-		<!-- Logo -->
-		<div id="logo">
-			<span class="image avatar48"><img src="../images/avatar.jpg" alt="" /></span>
-			<h1 id="title">Andrea Turco</h1>
-			<span class="byline">Interface developer</br> Web Developer</span>
-		</div>
+            <!-- Logo -->
+            <div id="logo">
+                <h1 id="title">Andrea Turco</h1>
+                <span class="byline">Frontend developer</br> Web Developer</span>
+            </div>
 
-		<!-- Nav -->
-		<nav id="nav">
-            <ul>
-                <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
-                <li><a href="#workExp" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Works Exper.</span></a></li>
-                <li><a href="#skills" id="skills-link" class="skel-panels-ignoreHref"><span class="fa fa-star">Skills</span></a></li>
-                <!--<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>-->
-				<li><a href="#explore" class="skel-panels-ignoreHref"><span class="fa fa-envelope">prova explore</span></a></li>
-				<li><a href="#/workDetails/1" class="skel-panels-ignoreHref"><span class="fa fa-envelope">prova workdetail</span></a></li>
-            </ul>
-		</nav>
-
-	</div>
-    <div class="bottom">
-
-        <!-- Social Icons -->
-        <ul class="icons">
-            <li><a href="https://twitter.com/sigturk" class="fa fa-twitter solo" target="_blank"><span>Twitter</span></a></li>
-            <!--<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>-->
-            <li><a href="https://github.com/AndreaTurco" class="fa fa-github solo" target="_blank"><span>Github</span></a></li>
-            <!--<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>-->
-            <li><a href="https://www.linkedin.com/profile/view?id=125275335&trk=nav_responsive_tab_profile" class="fa fa-linkedin-square solo" target="_blank"><span>Linkedin</span></a></li>
-            <li><a href="mailto:turcoandrea85@gmail.com" class="fa fa-envelope solo" target="_blank"><span>Email</span></a></li>
-        </ul>
-
-    </div>
-
-
-
-</div>
-
-<!-- Main -->
-<div id="main">
-    <section id="top" class="one">
-        <div class="container">
-
-            <header>
-                <h2 class="alt">Search throw my <strong><i>works experience and skills</i></strong>.</h2>
-            </header>
-            <!--<footer>-->
-                <!--<a href="#portfolio" class="button scrolly">WHAT I'VE WORKED ON</a>-->
-            <!--</footer>-->
+            <!-- Nav -->
+            <nav id="nav">
+                <ul>
+                    <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home" style="padding-left: 40px;">Intro</span></a></li>
+                    <li><a href="#workExp" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th" style="padding-left: 40px;">Works Exper.</span></a></li>
+                    <li><a href="#skills" id="skills-link" class="skel-panels-ignoreHref"><span class="fa fa-star" style="padding-left: 40px;">Skills</span></a></li>
+                    <!--<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>-->
+                    <li><a href="#explore" class="skel-panels-ignoreHref"><span class="fa fa-envelope" style="padding-left: 40px;">prova explore</span></a></li>
+                    <li><a href="#/workDetails/1" class="skel-panels-ignoreHref"><span class="fa fa-envelope" style="padding-left: 40px;">prova workdetail</span></a></li>
+                </ul>
+            </nav>
 
         </div>
-    </section>
+        <div class="bottom" layout="row" layout-align="center center">
 
-    <section id="skills" ng-controller="worksExploreCtrl">
-        <header layout="row" layout-align="center end">
-            <md-input-container flex="75" class="md-default-theme">
-                <label for="input_169">Search throw works:</label>
-                <input ng-model="filtraWork" class="ng-pristine ng-valid md-input ng-touched" id="input_169" tabindex="0" aria-invalid="false">
-            </md-input-container>
-           <!-- <div style="display: inline-block; width: 75%; float: left;">
-                <input ng-model="filtraWork">
-            </div>-->
-        </header>
-        <section id="articleContainer">
-            <md-content class="md-padding md-default-theme" layout="row" layout-wrap>
+            <!-- Social Icons -->
+            <ul class="icons">
+                <li><a href="https://twitter.com/sigturk" class="fa fa-twitter solo" target="_blank"><span>Twitter</span></a></li>
+                <!--<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>-->
+                <li><a href="https://github.com/AndreaTurco" class="fa fa-github solo" target="_blank"><span>Github</span></a></li>
+                <!--<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>-->
+                <li><a href="https://www.linkedin.com/profile/view?id=125275335&trk=nav_responsive_tab_profile" class="fa fa-linkedin-square solo" target="_blank"><span>Linkedin</span></a></li>
+                <li><a href="mailto:turcoandrea85@gmail.com" class="fa fa-envelope solo" target="_blank"><span>Email</span></a></li>
+            </ul>
 
-                <md-card class="md-default-theme" ng-repeat="work in allWorks | filter:filtraWork" flex="30" layout="column" layout-align="space-between center">
-                    <md-card-content>
-                        <h2 class="md-title">{{work.name}}</h2>
-                        <p>{{work.subtitle}}</p>
-                    </md-card-content>
-                    <div class="md-actions">
-                        <button class="md-raised md-primary md-button md-default-theme" ng-transclude>
-                            <span class="ng-scope">Details</span>
-                            <div class="md-ripple-container"></div></button>
-                    </div>
-                </md-card>
+        </div>
+    </md-sidenav>
+
+    <!-- Main -->
+    <div class="rightWrapper" flex-gt-md="70" flex="95">
+        <div class="menuToggle" ng-controller="AppCtrl" layout="row">
+            <md-content layout-padding>
+                <md-button ng-click="toggleLeft()" class="md-raised md-primary" hide-gt-md>
+                    Open Menu
+                </md-button>
             </md-content>
-               <!-- <article class="singleWork" ng-repeat="work in allWorks | filter:filtraWork">
-                    <h2>{{work.name}}</h2>
-                    <h5>{{work.subtitle}}</h5>
-                </article>-->
+        </div>
+        <section class="one">
+                <header>
+                    <h2 class="alt">Search throw my <strong><i>works experience and skills</i></strong>.</h2>
+                </header>
+                <!--<footer>-->
+                    <!--<a href="#portfolio" class="button scrolly">WHAT I'VE WORKED ON</a>-->
+                <!--</footer>-->
         </section>
 
-    </section>
+        <section id="skills" ng-controller="worksExploreCtrl">
+            <header layout="row" layout-align="center end">
+                <md-input-container flex="75" class="md-default-theme">
+                    <label for="input_169">Search throw works:</label>
+                    <input ng-model="filtraWork" class="ng-pristine ng-valid md-input ng-touched" id="input_169" tabindex="0" aria-invalid="false">
+                </md-input-container>
+               <!-- <div style="display: inline-block; width: 75%; float: left;">
+                    <input ng-model="filtraWork">
+                </div>-->
+            </header>
+            <section id="articleContainer">
+                <md-content class="md-padding md-default-theme" layout="row" layout-wrap>
 
-    <div ng-view></div>
+                    <md-card style="min-width: 200px;" class="md-default-theme" ng-repeat="work in allWorks | filter:filtraWork" flex-sm="95" flex-gt-md="30" flex-gt-sm="47" layout="column" layout-align="space-between center">
+                        <md-card-content>
+                            <h2 class="md-title">{{work.name}}</h2>
+                            <p>{{work.subtitle}}</p>
+                        </md-card-content>
+                        <div class="md-actions">
+                            <a class="md-raised md-primary md-button md-default-theme" href="blog.html/#workDetails/:{{work.id}}">
+                                <span class="ng-scope">Details</span>
+                                <div class="md-ripple-container"></div>
+                            </a>
+                        </div>
+                    </md-card>
+                </md-content>
+                   <!-- <article class="singleWork" ng-repeat="work in allWorks | filter:filtraWork">
+                        <h2>{{work.name}}</h2>
+                        <h5>{{work.subtitle}}</h5>
+                    </article>-->
+            </section>
 
-</div>
+        </section>
 
-<!-- Footer -->
-<div id="footer">
+        <div ng-view></div>
 
-	<!-- Copyright -->
-	<div class="copyright">
-		<p>&copy; 2014 Andrea Turco. All rights reserved.</p>
-	</div>
+        <!-- Footer -->
+        <div class="footer">
 
+            <!-- Copyright -->
+            <div class="copyright">
+                <p>&copy; 2014 Andrea Turco. All rights reserved.</p>
+            </div>
+
+        </div>
+    </div>
 </div>
 
 </body>
