--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Andrea Turco</h1>
-							<span class="byline">Interface developer</br> Web Developer</span>
+							<span class="byline">Frontend developer</br> Web Developer</span>
 						</div>
 
 					<!-- Nav -->
