--- a/app/blog.html
+++ b/app/blog.html
@@ -2,16 +2,20 @@
 <html ng-app="worksBlog">
 <head lang="en">
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Andrea Turco - web developer</title>
+    <meta name="description" content="personal site for Andrea Turco Web developer" />
+    <meta name="keywords" content="Web developer, Andrea Turco" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="../css/skel-noscript.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/style-wide.css" />
+    <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1, maximum-scale=1">
 	<!--[if lte IE 9]>
     <link rel="stylesheet" href="../css/ie9.css"/><![endif]-->
 	<!--[if lte IE 8]>
     <link rel="stylesheet" href="../css/ie8.css"/><![endif]-->
+
 </head>
 <body style="min-width: auto">
 <div class="wrapper" layout="row" layout-wrap layout-margin="20px">
