--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<head>
 		<title>Turco Andrea - web developer</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+        <title>Andrea Turco - web developer</title>
+		<meta name="description" content="personal site for Andrea Turco Web developer" />
+		<meta name="keywords" content="Web developer, Andrea Turco" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
