--- a/app/blog.html
+++ b/app/blog.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="../css/skel-noscript.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/style-wide.css" />
-    <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
 	<!--[if lte IE 9]>
     <link rel="stylesheet" href="../css/ie9.css"/><![endif]-->
 	<!--[if lte IE 8]>
     <link rel="stylesheet" href="../css/ie8.css"/><![endif]-->
 
 </head>
-<body style="min-width: auto">
+<body style="min-width: inherit;">
 <div class="wrapper" layout="row" layout-wrap layout-margin="20px">
     <!-- Header -->
     <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" style="background-color: #263238;">
