--- a/app/blog.html
+++ b/app/blog.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/skel-noscript.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/style-wide.css" />
+    <link rel="stylesheet" href="../css/mine.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
 	<!--[if lte IE 9]>
     <link rel="stylesheet" href="../css/ie9.css"/><![endif]-->
@@ -17,8 +18,7 @@
     <link rel="stylesheet" href="../css/ie8.css"/><![endif]-->
 
 </head>
-<body style="min-width: inherit;">
-<div class="wrapper" layout="row" layout-wrap layout-margin="20px">
+<body style="min-width: inherit;" layout="row" layout-wrap layout-margin="20px">
     <!-- Header -->
     <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" style="background-color: #263238;">
         <!--<md-toolbar class="md-theme-indigo">
@@ -134,7 +134,6 @@
 
         </div>
     </div>
-</div>
 
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
