mini fix  tasto menu e copyright

--- a/app/blog.html
+++ b/app/blog.html
@@ -5,7 +5,7 @@
 	<title>Andrea Turco - web developer</title>
     <meta name="description" content="personal site for Andrea Turco Web developer" />
     <meta name="keywords" content="Web developer, Andrea Turco" />
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="../css/skel-noscript.css" />
     <link rel="stylesheet" href="../css/style.css" />
@@ -72,7 +72,7 @@
 
     <!-- Main -->
     <div class="rightWrapper" flex-gt-md="70" flex="95">
-        <div class="menuToggle" ng-controller="AppCtrl" layout="row" style="position: fixed; z-index: 1;">
+        <div class="menuToggle" hide-gt-sm ng-controller="AppCtrl" layout="row" style="position: fixed; z-index: 1;">
             <md-content>
                 <md-button ng-click="toggleLeft()"  class="md-fab md-primary md-hue-2" aria-label="Comment">
                     <md-icon md-svg-src="../css/images/toggle.svg"></md-icon>
@@ -82,7 +82,7 @@
         <div class="spaceTop" style="height: 80px;" hide-gt-md></div>
         <section class="one">
                 <header>
-                    <h4 class="alt">Section made in Angular.js where you cand search throw my work experience.</h4>
+                    <h4 class="alt">Section made in Angular.js, here you can search throw my work experience.</h4>
                 </header>
                 <!--<footer>-->
                     <!--<a href="#portfolio" class="button scrolly">WHAT I'VE WORKED ON</a>-->
@@ -127,12 +127,10 @@
 
         <!-- Footer -->
         <div class="footer">
-
             <!-- Copyright -->
             <div class="copyright">
-                <p>&copy; 2014 Andrea Turco. All rights reserved.</p>
+                <p>&copy; 2015 Andrea Turco. All rights reserved.</p>
             </div>
-
         </div>
     </div>
 
