fine tuning per il modal dei dettagli

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				
 				<!-- Copyright -->
 					<div class="copyright">
-						<p>&copy; 2015 Andrea Turco. All rights reserved.</p>
+						<p>&copy; 2015 Andrea Turco. All rights reserved. Test ftp</p>
 					</div>
 				
 			</div>
