--- a/app/blog.html
+++ b/app/blog.html
@@ -5,6 +5,7 @@
 	<title>Andrea Turco - web developer</title>
     <meta name="description" content="personal site for Andrea Turco Web developer" />
     <meta name="keywords" content="Web developer, Andrea Turco" />
+
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="../css/skel-noscript.css" />
@@ -107,13 +108,13 @@
                             <h2 class="md-title">{{work.name}}</h2>
                             <p>{{work.subtitle}}</p>
                         </md-card-content>
-                        <div class="md-actions" ng-controller="AppCtrl">
+                        <div class="md-actions" ng-controller="AppCtrl" layout="row" layout-align="center end">
                             <a class="md-raised md-primary md-button md-default-theme" href="#/workDetails/{{work.id}}">
                                 <span class="ng-scope">Details</span>
                                 <div class="md-ripple-container"></div>
                             </a>
                             <md-button class="md-primary md-raised" ng-click="showAdvanced($event, work.id)" flex flex-md="100">
-                                Custom Dialog
+                                Show Details Dialog
                             </md-button>
                         </div>
                     </md-card>
@@ -143,13 +144,14 @@
 <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-animate.min.js"></script>-->
 
 <!-- Angular Material Dependencies -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-aria.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.min.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.js"></script>
 
 
 <script src="js/module.js"></script>
